# gnome-documents

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am  org.gnome.Documents.FacebookMiner.service.in  org.gnome.Documents.FlickrMiner.service.in
src/: Makefile-miner.am  documents.js  embed.js  lokview.js  preview.js
src/miner/: facebook-miner-main.c  flickr-miner-main.c  gd-facebook-miner.c  gd-facebook-miner.h  gd-flickr-miner.c  gd-flickr-miner.h  gd-miner.c
tests/: Makefile.am  basic.py  testutil.py
